data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_704.wast
;; 5. **Test for `nop` before Conditional Branching with `br_if`**:    - **Description**: Place `nop` before a `br_if` instruction and define checks for type integrity before and after the branching.    - **Constraint Checked**: Ensures type and stack consistency during conditional branching.    - **Relation**: Checks whether `nop` affects the validation of stack state leading to incorrect type assumptions during `br_if` execution.

(assert_invalid
  (module
    (func $test-nop-br_if
      (block $label 
        (nop)
        (br_if $label (i32.const 1))
      )
    )
  )
  "type mismatch"
)